<resources>
    <string name="app_name">Trashub</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_kamera">Kamera</string>
    <string name="title_akun">Akun</string>
    <string name="title_input">Hallo, Nama Kamu Siapa?</string>
    <string name="message_homepage1">"Mengurangi jumlah sampah berarti tidak menggunakan barang-barang yang tidak diperlukan dan tidak membeli barang-barang yang menghasilkan banyak sampah."</string>
    <string name="message_homepage2">"Memakai kembali barang-barang yang masih bagus dan masih bisa dipakai sebelum membuangnya."</string>
    <string name="message_homepage3">"Mendaur ulang barang-barang bekas menjadi produk baru yang bisa dipakai lagi."</string>
    <string name="message_quotes1">"\"Mari kita bantu bumi mengurangi sampah! Bawa botol minummu sendiri ke sekolah"\"</string>
    <string name="message_quotes2">"\"Gunakan kembali kotak sepatu lamamu untuk menyimpan mainan. Ayo, kita buat sesuatu yang baru!"\"</string>
    <string name="message_quotes3">"\"Pisahkan sampahmu! Plastik, kertas, dan logam harus masuk ke tempat yang tepat agar bisa didaur ulang"\"</string>
    <string name="masuk">Masuk</string>
    <string name="lanjut">Lanjut</string>
    <string name="_3r">3R</string>
    <string name="jenis_jenis_sampah">Jenis-Jenis Sampah</string>
    <string name="informasi_sampah">Informasi Sampah</string>
    <string name="organik">Organik</string>
    <string name="unorganik">Anorganik</string>
    <string name="B3">B3</string>
    <string name="cd_switch_camera">Button to switch to front or rear camera</string>
    <string name="cd_capture">Button to capture image</string>
    <string name="avatar">avatar</string>
    <string name="simpan">Simpan</string>
    <string name="title1">Halo, nama aku Nizar</string>
    <string name="title2">Nizar</string>
    <string name="nama_sampah">Nama Sampah</string>
    <string name="min_length_name">Nama yang Anda masukkan kurang dari minimal karakter</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="penjelasan_3r">Penjelasan 3R</string>
    <string name="reduce">Reduce</string>
    <string name="reuse">Reuse</string>
    <string name="recycle">Recycle</string>
    <string name="pengertian_reduce">Reduce berarti mengurangi penggunaan bahan-bahan yang tidak ramah lingkungan. Dalam hal ini, kita diharapkan untuk mengurangi penggunaan sumber daya alam yang tidak terbarukan seperti air, kayu, dan minyak bumi. Misalnya, dengan mengurangi pemakaian air saat mencuci piring atau mencuci mobil, kita dapat menghemat penggunaan air yang berlimpah. Selain itu, pengurangan penggunaan kantong plastik sekali pakai juga merupakan salah satu contoh penerapan konsep Reduce. Dengan mengurangi penggunaan kantong plastik, kita dapat mengurangi produksi sampah plastik yang sulit terurai di alam.</string>
    <string name="penjelasan_reduce">Penjelasan Reduce</string>
    <string name="pengertian_reuse">Reuse berarti menggunakan kembali barang-barang yang masih bisa digunakan. Dalam hal ini, kita diharapkan untuk memanfaatkan kembali barang-barang yang sebenarnya masih memiliki nilai fungsional. Misalnya, dengan memanfaatkan kembali kemasan bekas sebagai wadah penyimpanan atau memanfaatkan kembali kertas bekas sebagai bahan tulis. Dengan mempraktikkan konsep Reuse, kita dapat mengurangi jumlah sampah yang dihasilkan dan mengurangi kebutuhan akan produksi barang baru.</string>
    <string name="penjelasan_reuse">Penjelasan Reuse</string>
    <string name="pengertian_recycle">Recycle berarti mendaur ulang barang-barang yang sudah tidak dapat digunakan menjadi barang baru. Dalam hal ini, sampah-sampah seperti kertas, plastik, dan logam dapat diolah menjadi bahan baku baru yang dapat digunakan untuk membuat produk-produk baru. Misalnya, botol plastik bekas dapat diolah menjadi serat plastik yang dapat digunakan untuk membuat bahan tekstil atau bahan bangunan. Dengan mendaur ulang sampah, kita dapat mengurangi penggunaan sumber daya alam yang tidak terbarukan dan mengurangi jumlah sampah yang akhirnya akan mengotori lingkungan.</string>
    <string name="penjelasan_recycle">Penjelasan Recycle</string>
    <string name="judul">Judul</string>
    <string name="detail">Detail</string>
    <string name="halo">Halo, </string>
    <string name="jenis_jenis_sampah_organik">Jenis-Jenis Sampah Organik</string>
    <string name="jenis_jenis_sampah_anorganik">Jenis-Jenis Sampah Anorganik</string>
    <string name="jenis_jenis_sampah_b3">Jenis-Jenis Sampah B3</string>
    <string name="hasil">Hasil</string>
    <string name="jenis">Jenis</string>
    <string name="kategori">Kategori</string>
    <string name="keterangan">Keterangan</string>
    <string name="hasil_prediksi">Hasil Prediksi</string>
</resources>