<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJenis"
        style="@style/TextContent.TitleMedium"
        android:layout_width="345dp"
        android:layout_height="95dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="32dp"
        android:alpha="1"
        android:text="@string/jenis_jenis_sampah"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/btngreen"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3R"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:alpha="1"
        android:text="@string/_3r"
        android:textColor="@color/white"
        style="@style/TextContent.TitleMedium"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/btngreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJenis" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInformasi"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:alpha="1"
        android:text="@string/informasi_sampah"
        android:textColor="@color/white"
        style="@style/TextContent.TitleMedium"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/btngreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3R" />
</androidx.constraintlayout.widget.ConstraintLayout>